fix: display text wasn't aligned after solving

--- a/style.css
+++ b/style.css
@@ -23,6 +23,7 @@ body {
 
 .display {
     margin: 32px 0 50px;
+    padding: 2px 5px;
     border: 3px solid #F4EBD3;
     background-color: #98A1BC;
     width: 360px;
